[package]
name = "web3_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
log4rs = "1.3.0"
tokio = { version = "1.46.1", features = ["fs"] }
log = "0.4.27"
dotenv = "0.15.0"
solana-sdk = "2.3.1"
jito-sdk-rust = "0.3.2"
anyhow = "1.0.98"
bytemuck = "1.23.1"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
solana-client = "2.3.6"
solana-rpc-client = "2.3.6"
spl-token-client = "0.16.1"
#amm-cli = { git = "https://github.com/raydium-io/raydium-library" }
#clmm-cli = { git = "https://github.com/raydium-io/raydium-library" }
#cpswap-cli = { git = "https://github.com/raydium-io/raydium-library" }
#common = { git = "https://github.com/raydium-io/raydium-library" }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
clap = { version = "4.1.8", features = ["derive"] }
solana-system-transaction = "2.2.1"
solana-compute-budget-interface = "2.2.2"
solana-program = "2.3.0"
raydium_amm = "0.1.13"
borsh = "0.10.4"
borsh-derive = "0.10.4"
uuid = { version = "1.18.0", features = ["v4"] }
